--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     
 }
 h1{
-    font-size: 50px ;
+    font-size: 40px ;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .text-btn{
@@ -38,6 +38,28 @@ h1{
      font-weight: bolder;
      
      
+}
+.second-part{
+    position: absolute;
+    left: 15%;
+  
+}
+.second-part p{
+    color: brown;
+    padding-left: 2px;
+}
+.second-part input{
+    width: 100px;
+    height: 100px;
+    border-radius: 6px;
+    border: 5px 5px 5px rgb(182, 239, 11);
+    font-size: 25px;
+    font-style:bolder;
+    margin-left: 0px;
+    padding:6px 12px;
+    transition: 0.5s all ease-out;
+   
+    
 }
 
 
