--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@
   font-size: 12px;
   padding: 10px;
   
+  
  
   text-align: center;
 
+}
+span2{
+    color: rgb(0, 255, 64);
+}
+.first-part{
+    background-image: linear-gradient(rgb(12 12/33%),rgb(16 13 13/80%));
 }
 #first-part2 {
     transform: translate(-50%,-50%);
@@ -42,25 +49,86 @@ h1{
 .second-part{
     position: absolute;
     left: 15%;
+    text-align: center;
+    text-decoration: none;
+    padding: 6px 13px;
   
 }
+
 .second-part p{
     color: brown;
     padding-left: 2px;
 }
+span{
+    color: crimson;
+}
 .second-part input{
-    width: 100px;
+    width: 120px;
     height: 100px;
     border-radius: 6px;
-    border: 5px 5px 5px rgb(182, 239, 11);
-    font-size: 25px;
-    font-style:bolder;
-    margin-left: 0px;
-    padding:6px 12px;
+    font-weight: bold;
+    box-shadow: 10px;
+    font-size: 28px;
+    
+    margin-left: 70px;
+    padding:7px 15px;
     transition: 0.5s all ease-out;
-   
+      
+}
+.donate-300k{
+    margin: 5px 5px 5px ;
+}
+.second-part input :hover{
+    color:rgb(202, 11, 11);
+}
+.third-part input{
+    color: aliceblue;
+    background-color: darkgoldenrod;
+    height: 40px;
+    width: 130px;
+    text-align: center;
+    font-size: 20px;
+    text-align: bolder;
+    padding: 6px;
+    border-radius: 8px;
+    font-weight: 100px;
+
+}
+.donate-plan p{
+    color: black;
+}
+.plan-box{
+    display: flex;
+    align-items: center;
+}
+.service{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 200px;
+    margin-left: 90px;
+    margin-right: 180px;
+    margin-top: 28px;
+  
     
 }
+
+
+.new-box{
+    display: flex;
+    height: 445px;
+    width: 335px;
+    padding: 20px 35px;
+    background-color:rgb(241, 181, 181);
+    border-radius: 20px;
+    margin:15px;
+    margin-inline-start: 23px;
+  text-align: center;
+    
+
+}
+
+
 
 
 
